2002-12-26  Marius Vollmer  <mvo@zagadka.ping.de>

	* Makefile.am (c-tokenize.o): Refer to source via $< so that vpath
	builds work.
	(EXTRA_DIST): Added version.h.in.
	
2002-12-21  Mikael Djurfeldt  <djurfeldt@nada.kth.se>

	This change makes it possible for one thread to do lazy sweeping
	while other threads are running.  Now only the mark phase need to
	have all threads asleep.  We should look further into this issue.
	Presently, I've put the locking of scm_i_sweep_mutex at
	"conservative" places due to my current lack of knowledge about
	the garbage collector.  Please feel free to restrict these regions
	further to allow for maximal parallelism!

	* gc.c, gc.h (scm_i_sweep_mutex): New mutex.

	* gc.c (scm_gc_for_newcell), gc-malloc.c (scm_realloc,
	scm_gc_register_collectable_memory): Substitute locking of
	scm_i_sweep_mutex for calls to scm_i_thread_put_to_sleep.
	(scm_igc): Lock sweep mutex here instead of in callers; Calls to
	scm_i_thread_put_to_sleep/scm_i_thread_wake_up used to demarkate
	the single-thread section (which now only contains the mark
	phase).
	(scm_gc): Don't lock sweeo mutex here since scm_igc locks it;
	Removed SCM_DEFER/ALLOW_INTS.  Simply call scm_igc directly.

	* threads.c (gc_section_mutex): Removed.

2002-12-19  Mikael Djurfeldt  <mdj@kvast.blakulla.net>

	* threads.c (create_thread): Clear parent field in root state in
	order not to unnecessarily remember dead threads.

	* eval.c (call_subr2o_1, call_lsubr2_2): New functions.
	(scm_trampoline_1, scm_trampoline_2): Use them.

2002-12-18  Mikael Djurfeldt  <mdj@kvast.blakulla.net>

	Partial introduction of real plugin interface.

	* Makefile.am (modinclude_HEADERS): Added threads-plugin.h.
	(EXTRA_DIST): Added threads-plugin.c.

	* threads-plugin.h, threads-plugin.c: New files.

	* threads.h: #include "libguile/threads-plugin.h".

	* threads.c: #include "libguile/threads-plugin.c".

	* pthread-threads.c: Temporarily remove debugging functions.
