@@ -86,7 +86,14 @@ SCM_API int scm_flush_ws (SCM port, const char *eoferr);
 SCM_API int scm_casei_streq (char * s1, char * s2);
 SCM_API SCM scm_lreadr (SCM * tok_buf, SCM port, SCM *copy);
 SCM_API size_t scm_read_token (int ic, SCM * tok_buf, SCM port, int weird);
-SCM_API SCM scm_lreadparen (SCM * tok_buf, SCM port, char *name, SCM *copy);
+SCM_API SCM scm_lreadparen (SCM * tok_buf, SCM port, char *name, SCM *copy
+#ifdef SCM_ELISP_READ_EXTENSIONS
+			    , char term_char
+#define SCM_ELISP_CLOSE , ')'
+#else
+#define SCM_ELISP_CLOSE
+#endif
+			    );
 SCM_API SCM scm_lreadrecparen (SCM * tok_buf, SCM port, char *name, SCM *copy);
 SCM_API SCM scm_read_hash_extend (SCM chr, SCM proc);
 SCM_API void scm_init_read (void);
